--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
+
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+            crossorigin="anonymous" referrerpolicy="no-referrer">
+        <title>KBC</title>
+        <link rel="stylesheet" href="./style.css">
+    </head>
     
-</body>
+    <body>
+        <div class="win">You won:Rs 1,00,000</div>
+        <div class="money">Rs 5,00,000</div>
+        <div class="circle">25</div>
+        <!-- <div class="start-win">
+            <button class="on">Click here to start</button>
+        </div> -->
+        <div class="contain">
+            <div class="ques">"With which part of a computer is the advertising slogan 'Intel Inside' associated"
+            </div>
+
+            <div class="ans">
+                <button class="options" id="opt1">BIOS</button>
+                <button class="options" id="opt2">RAM</button>
+                <button class="options" id="opt3">USB</button>
+                <button class="options" id="opt4">Processor</button>
+            </div>
+
+            <div class="btn">
+            </div>
+
+            <div class="lifelines">
+                <button class="op" id="audience"><i class="fa fa-users"></i></button>
+                <button class="op" id="phone"> <i class="fa fa-phone"></i></button>
+                <button class="op" id="expert"><i class="fa fa-user"></i></button>
+            </div>
+        </div>
+        <script src="./app.js"></script>
+    </body>
+
 </html>
