--- a/index.html
+++ b/index.html
@@ -10,33 +10,52 @@
         <title>KBC</title>
         <link rel="stylesheet" href="./style.css">
     </head>
-    
+
     <body>
         <div class="win">You won:Rs 1,00,000</div>
         <div class="money">Rs 5,00,000</div>
-        <div class="circle">25</div>
+        <!-- <div class="circle">25</div> -->
         <!-- <div class="start-win">
             <button class="on">Click here to start</button>
         </div> -->
         <div class="contain">
-            <div class="ques">"With which part of a computer is the advertising slogan 'Intel Inside' associated"
-            </div>
+            <div class="ques" id="question"></div>
 
-            <div class="ans">
-                <button class="options" id="opt1">BIOS</button>
-                <button class="options" id="opt2">RAM</button>
-                <button class="options" id="opt3">USB</button>
-                <button class="options" id="opt4">Processor</button>
-            </div>
+            <!-- <div class="ans">
+                <button class="options" id="opt1"></button>
+                <button class="options" id="opt2"></button>
+                <button class="options" id="opt3"></button>
+                <button class="options" id="opt4"></button>
+            </div> -->
 
-            <div class="btn">
-            </div>
+            <form action="" class="ans" id="form">
+                <div class="option">
+                    <input type="radio" id="opt1" name="fav_language" class="input">
+                    <label for="html" class="options"></label>
+                </div>
+                <div class="option">
+                    <input type="radio" id="opt2" name="fav_language" class="input">
+                    <label for="css" class="options"></label>
+                </div>
+                <div class="option">
+                    <input type="radio" id="opt3" name="fav_language" class="input">
+                    <label for="javascript" class="options"></label>
+                </div>
+                <div class="option">
+                    <input type="radio" id="opt4" name="fav_language" class="input">
+                    <label for="javascript" class="options"></label>
+                </div>
+                <input type="submit" id="confirm" value="Confirm">
+            </form>
 
-            <div class="lifelines">
+            <div class="btn"></div>
+
+            <!-- <div class="lifelines">
                 <button class="op" id="audience"><i class="fa fa-users"></i></button>
                 <button class="op" id="phone"> <i class="fa fa-phone"></i></button>
                 <button class="op" id="expert"><i class="fa fa-user"></i></button>
-            </div>
+            </div> -->
+
         </div>
         <script src="./app.js"></script>
     </body>
