--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="win">You won:Rs 1,00,000</div>
         <div class="money">Rs 5,00,000</div>
-        <!-- <div class="circle">25</div> -->
+        <div class="circle">30</div>
         <!-- <div class="start-win">
             <button class="on">Click here to start</button>
         </div> -->
