--- a/index.html
+++ b/index.html
@@ -12,21 +12,9 @@
     </head>
 
     <body>
-        <div class="win">You won:Rs 1,00,000</div>
-        <div class="money">Rs 5,00,000</div>
-        <div class="circle">30</div>
-        <!-- <div class="start-win">
-            <button class="on">Click here to start</button>
-        </div> -->
+        <h1>KBC Game</h1>
         <div class="contain">
             <div class="ques" id="question"></div>
-
-            <!-- <div class="ans">
-                <button class="options" id="opt1"></button>
-                <button class="options" id="opt2"></button>
-                <button class="options" id="opt3"></button>
-                <button class="options" id="opt4"></button>
-            </div> -->
 
             <form action="" class="ans" id="form">
                 <div class="option">
@@ -49,13 +37,6 @@
             </form>
 
             <div class="btn"></div>
-
-            <!-- <div class="lifelines">
-                <button class="op" id="audience"><i class="fa fa-users"></i></button>
-                <button class="op" id="phone"> <i class="fa fa-phone"></i></button>
-                <button class="op" id="expert"><i class="fa fa-user"></i></button>
-            </div> -->
-
         </div>
         <script src="./app.js"></script>
     </body>
