--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
     </head>
 
     <body>
-        <div class="win">You won: ₹ 20,000</div>
+        <h1 class="heading">Who Will be Millionaire?</h1>
         <div class="circle"></div>
-        <div class="money"> ₹ 10,000 </div>
 
         <div class="loading">
             <button class="cssbuttons-io-button">Click here to start
