--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     </head>
 
     <body>
-        <h1 class="heading">Who Will be Millionaire?</h1>
+        <h1 class="loading-heading">Welcome To Kaun Banega Crorepati</h1>
+        <h2 class="heading">Who Will be Millionaire?</h2>
         <div class="circle"></div>
 
         <div class="loading">
